--- a/main.ipynb
+++ b/main.ipynb
@@ -93,13 +93,13 @@
     "# symbol of the stock\n",
     "symbol = \".SET\"\n",
     "# interval of the stock\n",
-    "interval = \"60m\"\n",
+    "interval = \"1m\"\n",
     "# limit of the stock data to be fetched\n",
-    "limit = 125\n",
+    "limit = 1000\n",
     "# start date of the stock data to be fetched\n",
-    "start = datetime.datetime(year=2022, month=1, day=1,tzinfo=zone).isoformat()\n",
+    "start = datetime.datetime(year=2021, month=6, day=8,tzinfo=zone).isoformat()\n",
     "# end date of the stock data to be fetched\n",
-    "end = datetime.datetime(year=2022, month=7, day=1,tzinfo=zone).isoformat()\n",
+    "end = datetime.datetime(year=2022, month=7, day=6,tzinfo=zone).isoformat()\n",
     "# normalize the stock data or not\n",
     "normalize = True\n"
    ]
@@ -124,6 +124,24 @@
     "                close=df['close'])])\n",
     "\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(market.get_candlestick(\".SET\",\"1m\",1000,\"2020-02-16T00:00:00\",\"2020-07-20T00:00:00\",True)['data']['time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "market.get_candlestick(\".SET\",\"4h\",1000,\"2022-02-16T00:00:00\",\"2022-07-20T00:00:00\",True)"
    ]
   }
  ],
