--- a/test.ipynb
+++ b/test.ipynb
@@ -10,7 +10,8 @@
     "import datetime as dt\n",
     "import yfinance as yf\n",
     "import json\n",
-    "from stockstats import wrap \n"
+    "from stockstats import wrap \n",
+    "import os\n"
    ]
   },
   {
@@ -43,6 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create stock_data directory if it doesn't exist\n",
+    "if not os.path.exists('stock_data'):\n",
+    "    os.makedirs('stock_data')\n",
     "for symbol in watch_list:\n",
     "    tk = yf.Ticker(f\"{symbol}.BK\")\n",
     "    df = tk.history(period='6mo', interval='1d')\n",
@@ -54,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# apply ta to data"
+    "# apply indicator to data"
    ]
   },
   {
@@ -63,6 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create stock_data_with_indicator directory if it doesn't exist\n",
+    "if not os.path.exists('stock_data_with_indicator'):\n",
+    "    os.makedirs('stock_data_with_indicator')\n",
     "for symbol in watch_list:\n",
     "    df = pd.read_csv(f\"stock_data\\{symbol}.csv\")\n",
     "    df_ta = wrap(df)\n",
@@ -87,12 +94,16 @@
     "import plotly.graph_objects as go\n",
     "symbol = random.choice(watch_list)\n",
     "df = pd.read_csv(f\"stock_data_with_indicator\\{symbol}.csv\")\n",
+    "df.set_index('date', inplace=True)\n",
     "fig = go.Figure(data=[go.Candlestick(x=df.index,\n",
     "                                     open=df['open'],\n",
     "                                     high=df['high'],\n",
     "                                     low=df['low'],\n",
     "                                     close=df['close'],\n",
-    "                                     name=symbol)])\n",
+    "                                     hoverlabel=dict(bgcolor='white'),\n",
+    "                                     name=symbol\n",
+    "                                        )])\n",
+    "\n",
     "\n",
     "fig.add_trace(go.Scatter(\n",
     "    x=df.index, y=df[\"middle\"], line_shape='spline', name=\"Middle\"))\n",
@@ -110,6 +121,12 @@
     "    title=f\"{symbol} [ open = {df['open'].iloc[-1]:.2f} THB || high = {df['high'].iloc[-1]:.2f} THB || low = {df['low'].iloc[-1]:.2f} THB || close = {df['close'].iloc[-1]:.2f} THB ]\")\n",
     "# hide bottom range slider\n",
     "fig.update_layout(xaxis_rangeslider_visible=False)\n",
+    "# removing all empty dates\n",
+    "# build complete timeline from start date to end date\n",
+    "dt_all = pd.date_range(start=df.index[0],end=df.index[-1])# retrieve the dates that ARE in the original datset\n",
+    "dt_obs = [d.strftime(\"%Y-%m-%d\") for d in pd.to_datetime(df.index)]# define dates with missing values\n",
+    "dt_breaks = [d for d in dt_all.strftime(\"%Y-%m-%d\").tolist() if not d in dt_obs]\n",
+    "fig.update_xaxes(rangebreaks=[dict(values=dt_breaks)])\n",
     "\n",
     "fig.show()\n"
    ]
