--- a/test.ipynb
+++ b/test.ipynb
@@ -121,10 +121,10 @@
     "    title=f\"{symbol} [ open = {df['open'].iloc[-1]:.2f} THB || high = {df['high'].iloc[-1]:.2f} THB || low = {df['low'].iloc[-1]:.2f} THB || close = {df['close'].iloc[-1]:.2f} THB ]\")\n",
     "# hide bottom range slider\n",
     "fig.update_layout(xaxis_rangeslider_visible=False)\n",
+    "\n",
     "# removing all empty dates\n",
-    "# build complete timeline from start date to end date\n",
-    "dt_all = pd.date_range(start=df.index[0],end=df.index[-1])# retrieve the dates that ARE in the original datset\n",
-    "dt_obs = [d.strftime(\"%Y-%m-%d\") for d in pd.to_datetime(df.index)]# define dates with missing values\n",
+    "dt_all = pd.date_range(start=df.index[0],end=df.index[-1])\n",
+    "dt_obs = [d.strftime(\"%Y-%m-%d\") for d in pd.to_datetime(df.index)]\n",
     "dt_breaks = [d for d in dt_all.strftime(\"%Y-%m-%d\").tolist() if not d in dt_obs]\n",
     "fig.update_xaxes(rangebreaks=[dict(values=dt_breaks)])\n",
     "\n",
