change last update to last data

--- a/test.ipynb
+++ b/test.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "# fig name\n",
     "fig.update_layout(\n",
-    "    title=f\"#{symbol} [last update {dt.datetime.now().strftime('%y/%d/%m %H:%M')}]<br>{' || '.join([f'{k} : {v}' for k,v in handler.get_analysis().summary.items()])}<br>[ open = {df['open'].iloc[-1]:.2f} || high = {df['high'].iloc[-1]:.2f} || low = {df['low'].iloc[-1]:.2f} || close = {df['close'].iloc[-1]:.2f} ]\")\n",
+    "    title=f\"#{symbol} [last data {pd.to_datetime(df.index)[-1].strftime('y%Y/ m%d/ d%m')}]<br>{' || '.join([f'{k} : {v}' for k,v in handler.get_analysis().summary.items()])}<br>[ open = {df['open'].iloc[-1]:.2f} || high = {df['high'].iloc[-1]:.2f} || low = {df['low'].iloc[-1]:.2f} || close = {df['close'].iloc[-1]:.2f} ]\")\n",
     "# hide bottom range slider\n",
     "fig.update_layout(xaxis_rangeslider_visible=False)\n",
     "\n",
