--- a/test.ipynb
+++ b/test.ipynb
@@ -76,7 +76,8 @@
     "    df = pd.read_csv(f\"stock_data\\{symbol}.csv\")\n",
     "    df_ta = wrap(df)\n",
     "    df_ta.init_all()\n",
-    "    df.to_csv(f\"stock_data_with_indicator\\{symbol}.csv\")"
+    "    df_ta.to_csv(f\"stock_data_with_indicator\\{symbol}.csv\")\n",
+    "df_ta[\"close_20_ema\"]"
    ]
   },
   {
@@ -95,7 +96,6 @@
     "import random\n",
     "import plotly.graph_objects as go\n",
     "from tradingview_ta import TA_Handler, Interval\n",
-    "import tradingview_ta\n",
     "\n",
     "symbol = random.choice(watch_list)\n",
     "handler = TA_Handler(\n",
@@ -141,6 +141,62 @@
     "\n",
     "fig.write_image(f\"images/{symbol}-{dt.date.today()}.webp\",format=\"webp\",scale=4)\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plot import plot_supertrend\n",
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "import json\n",
+    "from stockstats import wrap\n",
+    "import os\n",
+    "\n",
+    "# setting\n",
+    "WATCH_LIST_FILE = 'watch_list.json'\n",
+    "STOCK_DATA_DIR = 'stock_data'\n",
+    "STOCK_DATA_DIR_WITH_INDICATOR_DIR = 'stock_data_with_indicator'\n",
+    "\n",
+    "\n",
+    "# get watch list\n",
+    "file_path = os.path.dirname(__file__)\n",
+    "with open(os.path.join(file_path, WATCH_LIST_FILE)) as f:\n",
+    "    watch_list = json.load(f)\n",
+    "\n",
+    "# create stock data dir if not exist\n",
+    "if not os.path.exists(os.path.join(file_path, STOCK_DATA_DIR)):\n",
+    "    os.makedirs(os.path.join(file_path, STOCK_DATA_DIR))\n",
+    "\n",
+    "# fetch stock data from yahoo finance\n",
+    "for i, symbol in enumerate(watch_list):\n",
+    "    tk = yf.Ticker(f\"{symbol}.BK\")\n",
+    "    df = tk.history(period='3mo', interval='1d')\n",
+    "    df.to_csv(os.path.join(file_path, STOCK_DATA_DIR, f\"{symbol}.csv\"))\n",
+    "    print(f\"{symbol} data fetched {i+1}/{len(watch_list)}\")\n",
+    "\n",
+    "# create stock data with indicator dir if not exist\n",
+    "if not os.path.exists(os.path.join(file_path, STOCK_DATA_DIR_WITH_INDICATOR_DIR)):\n",
+    "    os.makedirs(os.path.join(file_path, STOCK_DATA_DIR_WITH_INDICATOR_DIR))\n",
+    "\n",
+    "# apply stock stats to stock data\n",
+    "for i, symbol in enumerate(watch_list):\n",
+    "    try:\n",
+    "        df = pd.read_csv(os.path.join(\n",
+    "            file_path, STOCK_DATA_DIR, f\"{symbol}.csv\"))\n",
+    "\n",
+    "        df_ta = wrap(df)\n",
+    "        df_ta[\"close_20_ema\"]\n",
+    "        df_ta[\"supertrend\"]\n",
+    "        df_ta.to_csv(os.path.join(\n",
+    "            file_path, STOCK_DATA_DIR_WITH_INDICATOR_DIR, f\"{symbol}.csv\"))\n",
+    "        print(f\"{symbol} done {i+1}/{len(watch_list)}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"{symbol} error {e}\")\n",
+    "        continue\n"
    ]
   }
  ],
