--- a/test.ipynb
+++ b/test.ipynb
@@ -198,6 +198,17 @@
     "        print(f\"{symbol} error {e}\")\n",
     "        continue\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tk = yf.Ticker(f\"^SET.BK\")\n",
+    "info = tk.info\n",
+    "info"
+   ]
   }
  ],
  "metadata": {
